preview img added

--- a/Index.html
+++ b/Index.html
@@ -87,7 +87,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-12 site-title">
                         <h3 class="title-text">Hey</h3>
-                        <h1 class="title-text text-uppercase">I am Towfik</h1>
+                        <h1 class="title-text text-uppercase">I'm Towfik</h1>
                         <h4 class="title-text text-uppercase">Senior Frontend Developer</h4>
                         <div class="site-buttons">
                             <div class="d-flex flex-row flex-wrap">
@@ -575,7 +575,8 @@
                 <div class="copyrights text-center">
                     <p class="para">
                         Get this template @
-                        <a href="#"><span style="color: var(--primary-color);">Github</span></a>
+                        <a href="https://github.com/towfik2564/portfolio.git "><span
+                                style="color: var(--primary-color);">Github</span></a>
                     </p>
                 </div>
             </div>
